<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <CheckBox
        android:id="@+id/checkFriday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        app:layout_constraintBottom_toBottomOf="@+id/checkThursday"
        app:layout_constraintTop_toTopOf="@+id/checkThursday"
        tools:layout_editor_absoluteX="327dp" />

    <CheckBox
        android:id="@+id/checkThursday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        app:layout_constraintBottom_toBottomOf="@+id/checkMonday"
        app:layout_constraintTop_toTopOf="@+id/checkMonday"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="260dp" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="360dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/workHours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterUser"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="49dp"
        android:contentDescription="Password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/enterEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterUser" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/enterPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enterPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/enterAddress"
        app:layout_constraintStart_toStartOf="@+id/enterEmail"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail" />

    <EditText
        android:id="@+id/enterAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/workHours"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:text="M"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workHours" />

    <TextView
        android:id="@+id/workHours"
        android:layout_width="88dp"
        android:layout_height="22dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:text="@string/hours"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <Spinner
        android:id="@+id/spinner11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner12"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="158dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner11" />

    <CheckBox
        android:id="@+id/checkMonday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="236dp"
        android:text="@string/monday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:text="@string/tuesday"
        app:layout_constraintStart_toStartOf="@+id/checkMonday"
        app:layout_constraintTop_toTopOf="@+id/checkMonday" />

    <CheckBox
        android:id="@+id/checkWednesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:text="@string/wednesday"
        app:layout_constraintStart_toStartOf="@+id/checkMonday"
        app:layout_constraintTop_toTopOf="@+id/checkMonday" />

</android.support.constraint.ConstraintLayout>